feat(tests): Unit tests for Object Managers level classes are introduced. Some errors in prod classes are fixed.